--- a/platformio.ini
+++ b/platformio.ini
@@ -1,10 +1,3 @@
-;----------------------------------------------------------------------------------------------------
-;
-;
-;
-;
-;
-;----------------------------------------------------------------------------------------------------
 ; PlatformIO Project Configuration File
 ;
 ;   Build options: build flags, source filter
@@ -22,17 +15,17 @@ framework = arduino
 monitor_speed = 9600
 monitor_filters = default
 lib_deps = 
-    miguelbalboa/MFRC522@^1.4.11
-    tzapu/WiFiManager@^0.16.0
-    ESP8266WebServer
-    ESP8266WiFi
-    ArduinoJson
-    WiFiManager
-    ESP8266mDNS
-    DNSServer
-    EEPROM
-    Servo
-    SPI
-    Wire
-    prampec/IotWebConf@^3.2.1
-    
+	miguelbalboa/MFRC522@^1.4.11
+	tzapu/WiFiManager@^0.16.0
+	ESP8266WebServer
+	ESP8266WiFi
+	ArduinoJson
+	WiFiManager
+	ESP8266mDNS
+	DNSServer
+	EEPROM
+	Servo
+	SPI
+	Wire
+	prampec/IotWebConf@^3.2.1
+	adafruit/DHT sensor library@^1.4.6
