--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ lib_deps =
 	miguelbalboa/MFRC522@^1.4.11
 	tzapu/WiFiManager@^0.16.0
 	ESP8266WebServer
+	LiquidCrystal I2C @ 1.1.2
 	ESP8266WiFi
 	ArduinoJson
 	WiFiManager
@@ -29,3 +30,4 @@ lib_deps =
 	Wire
 	prampec/IotWebConf@^3.2.1
 	adafruit/DHT sensor library@^1.4.6
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
